01-peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: gatheraa
spec:
  mtls:
    mode: STRICT
