02-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gatheraa-gateway
  namespace: gatheraa
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gatheraa-api-routes
  namespace: gatheraa
spec:
  hosts:
  - "*"
  gateways:
  - gatheraa-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-service.gatheraa.svc.cluster.local
        port:
          number: 3000
