05-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: require-jwt
  namespace: gatheraa
spec:
  selector:
    matchLabels:
      app: backend-service
  action: ALLOW
  rules:
  - from:
    - source:
        namespaces: ["gatheraa", "istio-system"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
